--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+chrono = "0.4.38"
 comrak = "0.30.0"
 console_error_panic_hook = "0.1.7"
 reqwest = "0.12.9"
